--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="perfil-foto" src="https://github.com/treserker.png">
         <div class="titulo">
           <h1>Vitor Vieira</h1>
-          <h3>Desenvolvedor Front-end e Game Designer</h3>
+          <h3>Desenvolvedor Back-end e Game Designer</h3>
         </div>
       </div>
       <div class="tema">
